--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -12,7 +12,7 @@
 
 <img src="cid:nfcorepipelinelogo">
 
-<h1>nf-core/methylseq v${version}</h1>
+<h1>nf-core/methylseq ${version}</h1>
 <h2>Run Name: $runName</h2>
 
 <% if (!success){
